<resources>
    <string name="app_name">ReLove</string>
    <string name="relove">ReLove</string>
    <string name="emailLoginHint">Email</string>
    <string name="passwordLoginHint">Password</string>
    <string name="loginText">Login</string>
    <string name="forgot_passwordText">Forgot password</string>
    <string name="or_create_an_account">or create an account</string>
    <string name="retype_password">Retype password</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>